--- a/.github/workflows/build-arrowos-12.1-kernel-alioth.yml
+++ b/.github/workflows/build-arrowos-12.1-kernel-alioth.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Check for existing Python 2.7
         id: check-python
         run: |
-          if command -v python2.7 &> /dev/null; then
+          if command -v python2.7 &> /dev/null && python2.7 --version 2>&1 | grep -q "2.7"; then
             echo "python_exists=true" >> $GITHUB_OUTPUT
             echo "✅ Python 2.7 already installed in system"
           else
@@ -43,7 +43,7 @@ jobs:
         id: cache-python27
         with:
           path: /tmp/python-2.7.18
-          key: python-2.7.18-${{ runner.os }}-v3
+          key: python-2.7.18-${{ runner.os }}-v4
           restore-keys: |
             python-2.7.18-${{ runner.os }}-
 
@@ -61,28 +61,40 @@ jobs:
           cd ..
           rm -rf Python-2.7.18*
 
-      - name: Setup Python from cache
+      - name: Install Python to system from cache
         if: steps.check-python.outputs.python_exists == 'false' && steps.cache-python27.outputs.cache-hit == 'true'
         run: |
-          echo "Using cached Python 2.7.18"
+          echo "Installing cached Python 2.7.18 to system..."
+          sudo cp -r /tmp/python-2.7.18/* /usr/local/ || true
+          # 确保二进制文件有执行权限
+          sudo chmod +x /usr/local/bin/python2.7 /usr/local/bin/python2 || true
 
-      - name: Install Python to system (if built from source)
+      - name: Install Python to system from source
         if: steps.check-python.outputs.python_exists == 'false' && steps.cache-python27.outputs.cache-hit != 'true'
         run: |
-          echo "Installing Python 2.7.18 to system..."
+          echo "Installing built Python 2.7.18 to system..."
           sudo cp -r /tmp/python-2.7.18/* /usr/local/
-          sudo ln -sf /usr/local/bin/python2.7 /usr/local/bin/python2
+          # 确保二进制文件有执行权限
+          sudo chmod +x /usr/local/bin/python2.7 /usr/local/bin/python2
+
+      - name: Create Python 2 symlinks
+        if: steps.check-python.outputs.python_exists == 'false'
+        run: |
+          echo "Creating Python 2 symlinks..."
+          sudo ln -sf /usr/local/bin/python2.7 /usr/local/bin/python2 || true
+          sudo ln -sf /usr/local/bin/python2.7 /usr/bin/python2.7 || true
+          sudo ln -sf /usr/local/bin/python2 /usr/bin/python2 || true
 
       - name: Final Python verification
         run: |
-          echo "Final Python verification:"
-          which python2.7 && python2.7 --version || echo "python2.7 not in PATH"
-          which python2 && python2 --version || echo "python2 not in PATH"
-          # 如果系统没有，使用我们安装的
-          if ! command -v python2.7 &> /dev/null; then
-            echo "Adding /usr/local/bin to PATH"
-            echo "/usr/local/bin" >> $GITHUB_PATH
-          fi
+          echo "=== Final Python Verification ==="
+          echo "PATH: $PATH"
+          echo "which python2.7: $(which python2.7 2>/dev/null || echo 'not found')"
+          echo "which python2: $(which python2 2>/dev/null || echo 'not found')"
+          python2.7 --version || echo "python2.7 --version failed"
+          python2 --version || echo "python2 --version failed"
+          echo "Python 2.7 location:"
+          find /usr -name "python2.7" -type f 2>/dev/null | head -5 || echo "No python2.7 found in /usr"
 
       - name: Clone kernel source and setup KernelSU
         run: |
