--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
   
 env:
   REPO_URL: https://github.com/LeeHe-gif/android_kernel_zte_ums9620_mifi_u30air
-  REPO_BRANCH: main
+  REPO_BRANCH: u30air
   TZ: Asia/Shanghai
 
 jobs:
