--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -18,6 +18,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    # 请求更多资源
+    resources:
+      limits:
+        memory: 32G
+        cpu: 8
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
