--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -18,12 +18,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    # 请求更多资源
-    resources:
-      limits:
-        memory: 32G
-        cpu: 8
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -45,7 +39,7 @@ jobs:
 
       - name: wget kernel source
         run: |
-          wget -O U30Air_AndroidT_kernel-5.4.254.tar.gz "https://download.ztedevices.com/device/global/support/opensource/2/20240424_01/U30Air_AndroidT_kernel(5.4.254).tar.gz#W3"
+          wget -q U30Air_AndroidT_kernel-5.4.254.tar.gz "https://download.ztedevices.com/device/global/support/opensource/2/20240424_01/U30Air_AndroidT_kernel(5.4.254).tar.gz#W3"
           mkdir -p kernel_source
           tar -xzf U30Air_AndroidT_kernel-5.4.254.tar.gz -C kernel_source
   
