--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -22,6 +22,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Free disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+
       - name: Setup massive swap
         run: |
           free -h
