modified:   .github/workflows/build-arrow0s-11.0-kernel-polaris.yml 	modified:   .github/workflows/build-arrowos-12.1-kernel-alioth.yml 	modified:   .github/workflows/build-lineagesos-22.2-kernel-alioth.yml 	modified:   .github/workflows/test.yml 	modified:   .github/workflows/test2.yml 	deleted:    nolto-u30air-defconfig 	renamed:    build.sh -> scripts/build.sh 	renamed:    build1.sh -> scripts/build1.sh 	renamed:    build2.sh -> scripts/build2.sh 	renamed:    build3.sh -> scripts/build3.sh 	renamed:    build4.sh -> scripts/build4.sh 	renamed:    build5.sh -> scripts/build5.sh 	renamed:    show_hardware_info.sh -> scripts/show_hardware_info.sh

--- a/.github/workflows/build-arrowos-12.1-kernel-alioth.yml
+++ b/.github/workflows/build-arrowos-12.1-kernel-alioth.yml
@@ -106,7 +106,7 @@ jobs:
   
       - name: Build kernel with clang 14.0.2(clang-r445002)
         run: |
-          cp build3.sh kernel_source/
+          cp scripts/build3.sh kernel_source/
           cd kernel_source
           chmod 755 build3.sh
           ./build3.sh
