--- a/.github/workflows/build-arrow0s-11.0-kernel-polaris.yml
+++ b/.github/workflows/build-arrow0s-11.0-kernel-polaris.yml
@@ -1,11 +1,11 @@
 name: Build Kernel and Create Release
 
 on:
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:
 
 jobs:
   build-kernel:
-    runs-on: ubuntu-latest  # 改为最新版本，使用 Linaro 工具链
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -22,7 +22,6 @@ jobs:
 
     - name: Download and setup Linaro GCC 7.5.0 toolchains
       run: |
-        # 创建工具链目录
         sudo mkdir -p /opt/toolchains
         sudo chmod 777 /opt/toolchains
         
@@ -50,7 +49,7 @@ jobs:
                 
     - name: Build kernel with Linaro GCC 7.5.0
       run: |
-        cp build.sh android_kernel_xiaomi_sdm845/
+        cp scripts/build.sh android_kernel_xiaomi_sdm845/
         cd android_kernel_xiaomi_sdm845
         chmod 755 build.sh
         ./build.sh
