--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -76,3 +76,44 @@ jobs:
           path: |
             kernel_source/bsp/kernel5.4/kernel5.4/kernel_boot_directory.zip
           retention-days: 30
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    if: success()
+
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: u30air-kernel-build-artifacts-2
+          path: ./artifacts
+
+      - name: List downloaded artifacts
+        run: |
+          echo "当前目录结构:"
+          pwd
+          ls -la
+          echo "Artifacts 目录结构:"
+          ls -la ./artifacts/
+          
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: "zte-u30air-kernel-build"
+          name: "zte-u30air kernel build"
+          body: |
+            # Kernel Build
+          
+            ## 包含文件：
+            - `kernel_boot_directory.zip` - 完整的编译输出目录
+            ## 说明：
+            - ✅ 基于 [这个](https://github.com/Enceka/android_kernel_zte_ums9620_mifi_u30air.git) 内核源码
+            - ✅ 使用 clang 12.1.0 编译
+
+          draft: false
+          prerelease: false
+          files: |
+            ./artifacts/kernel_boot_directory.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
