--- a/config/my_U30Air_defconfig
+++ b/config/my_U30Air_defconfig
@@ -29,7 +29,8 @@ CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
-# CONFIG_POSIX_MQUEUE is not set
+CONFIG_POSIX_MQUEUE=y
+CONFIG_POSIX_MQUEUE_SYSCTL=y
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
@@ -170,6 +171,7 @@ CONFIG_CGROUP_BPF=y
 CONFIG_SOCK_CGROUP_DATA=y
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
+CONFIG_IPC_NS=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
@@ -412,7 +414,6 @@ CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
-CONFIG_COMPAT_VDSO=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -5531,11 +5532,9 @@ CONFIG_VENDOR_SQC_CHARGER=y
 # CONFIG_TOUCHSCREEN_FTS_V4_1 is not set
 # CONFIG_TOUCHSCREEN_FTS_UFP is not set
 # CONFIG_TOUCHSCREEN_FTS_UFP_V4_1 is not set
-# CONFIG_TOUCHSCREEN_FTS_PAD is not set
 # CONFIG_TOUCHSCREEN_TLSC6X_V3 is not set
 # CONFIG_TOUCHSCREEN_GCORE_TS is not set
 # CONFIG_TOUCHSCREEN_GCORE_TS_V3 is not set
-# CONFIG_TOUCHSCREEN_GCORE_TS_V4 is not set
 # CONFIG_TOUCHSCREEN_BETTERLIFE_TS is not set
 # CONFIG_TOUCHSCREEN_SITRONIX_INCELL is not set
 # CONFIG_TOUCHSCREEN_OMNIVISION_TCM is not set
@@ -5578,7 +5577,6 @@ CONFIG_VENDOR_CONFIG_COMMON_HELPER=y
 CONFIG_CUSTOM_KERNEL_SAR_SENSOR=y
 # CONFIG_CUSTOM_KERNEL_SKEY_SENSOR is not set
 # CONFIG_CUSTOM_KERNEL_HALL_SENSOR is not set
-# CONFIG_CUSTOM_SENSOR_NATIVE_ACC is not set
 # CONFIG_SENSOR_MLX90632 is not set
 CONFIG_SAR_SENSOR_AW9610X=m
 # CONFIG_SAR_SENSOR_AW9610X_2 is not set
@@ -5587,9 +5585,6 @@ CONFIG_SAR_SENSOR_STK501XX=m
 CONFIG_SAR_PARA="bougain"
 # CONFIG_SKEY_SENSOR_AW9620X is not set
 # CONFIG_HALL_SENSOR_AH1898 is not set
-# CONFIG_NATIVE_ACC_STK8BAXX_I2C is not set
-# CONFIG_NATIVE_ACC_MC3XXX_I2C is not set
-# CONFIG_NATIVE_ACC_SC7A20_I2C is not set
 # CONFIG_ZTE_BREATHING_LIGHT_LEDS is not set
 # CONFIG_ZTE_LEDS_AW210XX is not set
 # CONFIG_ZTE_LEDS_AW2016 is not set
@@ -5636,8 +5631,6 @@ CONFIG_ZCARD_HOLDER=m
 # CONFIG_ZTE_LCDBL_I2C_CTRL_VSP_VSN_200MA_ENHANCE is not set
 CONFIG_VENDOR_STATS_INFO=m
 # CONFIG_ZTE_PV_PIN_TEST is not set
-CONFIG_ZTE_DDR_INFO=m
-# CONFIG_DCMTALK_SUPPORT is not set
 CONFIG_ZTE_BOOTREASON=m
 CONFIG_ZTE_BOARD_STATE=y
 # CONFIG_ZTE_BEILU_GPIO_CTL is not set
@@ -6255,7 +6248,6 @@ CONFIG_OID_REGISTRY=y
 CONFIG_UCS2_STRING=y
 CONFIG_HAVE_GENERIC_VDSO=y
 CONFIG_GENERIC_GETTIMEOFDAY=y
-CONFIG_GENERIC_COMPAT_VDSO=y
 CONFIG_FONT_SUPPORT=y
 CONFIG_FONT_8x16=y
 CONFIG_FONT_AUTOSELECT=y
