--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -16,7 +16,7 @@ on:
         description: "Compile thread"
         required: false
         default: "all"
-        type: boolean
+        type: choice
         options:
           - all
           - 1
