--- a/config/my_U30Air_defconfig
+++ b/config/my_U30Air_defconfig
@@ -29,7 +29,8 @@ CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
-# CONFIG_POSIX_MQUEUE is not set
+CONFIG_POSIX_MQUEUE=y
+CONFIG_POSIX_MQUEUE_SYSCTL=y
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
@@ -162,7 +163,7 @@ CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
-# CONFIG_CGROUP_DEVICE is not set
+CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_BPF=y
@@ -170,6 +171,7 @@ CONFIG_CGROUP_BPF=y
 CONFIG_SOCK_CGROUP_DATA=y
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
+CONFIG_IPC_NS=y
 # CONFIG_USER_NS is not set
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
@@ -412,7 +414,6 @@ CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
-CONFIG_COMPAT_VDSO=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -1008,13 +1009,14 @@ CONFIG_NETWORK_SECMARK=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
-# CONFIG_BRIDGE_NETFILTER is not set
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
 #
 CONFIG_NETFILTER_INGRESS=y
 CONFIG_NETFILTER_NETLINK=y
+CONFIG_NETFILTER_FAMILY_BRIDGE=y
 CONFIG_NETFILTER_FAMILY_ARP=y
 # CONFIG_NETFILTER_NETLINK_ACCT is not set
 CONFIG_NETFILTER_NETLINK_QUEUE=y
@@ -1098,7 +1100,7 @@ CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 #
 # Xtables matches
 #
-# CONFIG_NETFILTER_XT_MATCH_ADDRTYPE is not set
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
 CONFIG_NETFILTER_XT_MATCH_BPF=y
 # CONFIG_NETFILTER_XT_MATCH_CGROUP is not set
 # CONFIG_NETFILTER_XT_MATCH_CLUSTER is not set
@@ -1119,6 +1121,7 @@ CONFIG_NETFILTER_XT_MATCH_HELPER=y
 CONFIG_NETFILTER_XT_MATCH_HL=y
 # CONFIG_NETFILTER_XT_MATCH_IPCOMP is not set
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
+CONFIG_NETFILTER_XT_MATCH_IPVS=y
 CONFIG_NETFILTER_XT_MATCH_L2TP=y
 CONFIG_NETFILTER_XT_MATCH_LENGTH=y
 CONFIG_NETFILTER_XT_MATCH_LIMIT=y
@@ -1129,6 +1132,7 @@ CONFIG_NETFILTER_XT_MATCH_MARK=y
 # CONFIG_NETFILTER_XT_MATCH_OSF is not set
 CONFIG_NETFILTER_XT_MATCH_OWNER=y
 CONFIG_NETFILTER_XT_MATCH_POLICY=y
+# CONFIG_NETFILTER_XT_MATCH_PHYSDEV is not set
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
@@ -1147,7 +1151,51 @@ CONFIG_NETFILTER_XT_MATCH_U32=y
 # end of Core Netfilter Configuration
 
 # CONFIG_IP_SET is not set
-# CONFIG_IP_VS is not set
+CONFIG_IP_VS=y
+# CONFIG_IP_VS_IPV6 is not set
+# CONFIG_IP_VS_DEBUG is not set
+CONFIG_IP_VS_TAB_BITS=12
+
+#
+# IPVS transport protocol load balancing support
+#
+# CONFIG_IP_VS_PROTO_TCP is not set
+# CONFIG_IP_VS_PROTO_UDP is not set
+# CONFIG_IP_VS_PROTO_ESP is not set
+# CONFIG_IP_VS_PROTO_AH is not set
+# CONFIG_IP_VS_PROTO_SCTP is not set
+
+#
+# IPVS scheduler
+#
+# CONFIG_IP_VS_RR is not set
+# CONFIG_IP_VS_WRR is not set
+# CONFIG_IP_VS_LC is not set
+# CONFIG_IP_VS_WLC is not set
+# CONFIG_IP_VS_FO is not set
+# CONFIG_IP_VS_OVF is not set
+# CONFIG_IP_VS_LBLC is not set
+# CONFIG_IP_VS_LBLCR is not set
+# CONFIG_IP_VS_DH is not set
+# CONFIG_IP_VS_SH is not set
+# CONFIG_IP_VS_MH is not set
+# CONFIG_IP_VS_SED is not set
+# CONFIG_IP_VS_NQ is not set
+
+#
+# IPVS SH scheduler
+#
+CONFIG_IP_VS_SH_TAB_BITS=8
+
+#
+# IPVS MH scheduler
+#
+CONFIG_IP_VS_MH_TAB_INDEX=12
+
+#
+# IPVS application helper
+#
+# CONFIG_IP_VS_NFCT is not set
 
 #
 # IP: Netfilter Configuration
@@ -1212,7 +1260,9 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
-# CONFIG_IP6_NF_NAT is not set
+CONFIG_IP6_NF_NAT=y
+CONFIG_IP6_NF_TARGET_MASQUERADE=y
+# CONFIG_IP6_NF_TARGET_NPT is not set
 # end of IPv6: Netfilter Configuration
 
 CONFIG_NF_DEFRAG_IPV6=y
@@ -5531,11 +5581,9 @@ CONFIG_VENDOR_SQC_CHARGER=y
 # CONFIG_TOUCHSCREEN_FTS_V4_1 is not set
 # CONFIG_TOUCHSCREEN_FTS_UFP is not set
 # CONFIG_TOUCHSCREEN_FTS_UFP_V4_1 is not set
-# CONFIG_TOUCHSCREEN_FTS_PAD is not set
 # CONFIG_TOUCHSCREEN_TLSC6X_V3 is not set
 # CONFIG_TOUCHSCREEN_GCORE_TS is not set
 # CONFIG_TOUCHSCREEN_GCORE_TS_V3 is not set
-# CONFIG_TOUCHSCREEN_GCORE_TS_V4 is not set
 # CONFIG_TOUCHSCREEN_BETTERLIFE_TS is not set
 # CONFIG_TOUCHSCREEN_SITRONIX_INCELL is not set
 # CONFIG_TOUCHSCREEN_OMNIVISION_TCM is not set
@@ -5578,7 +5626,6 @@ CONFIG_VENDOR_CONFIG_COMMON_HELPER=y
 CONFIG_CUSTOM_KERNEL_SAR_SENSOR=y
 # CONFIG_CUSTOM_KERNEL_SKEY_SENSOR is not set
 # CONFIG_CUSTOM_KERNEL_HALL_SENSOR is not set
-# CONFIG_CUSTOM_SENSOR_NATIVE_ACC is not set
 # CONFIG_SENSOR_MLX90632 is not set
 CONFIG_SAR_SENSOR_AW9610X=m
 # CONFIG_SAR_SENSOR_AW9610X_2 is not set
@@ -5587,9 +5634,6 @@ CONFIG_SAR_SENSOR_STK501XX=m
 CONFIG_SAR_PARA="bougain"
 # CONFIG_SKEY_SENSOR_AW9620X is not set
 # CONFIG_HALL_SENSOR_AH1898 is not set
-# CONFIG_NATIVE_ACC_STK8BAXX_I2C is not set
-# CONFIG_NATIVE_ACC_MC3XXX_I2C is not set
-# CONFIG_NATIVE_ACC_SC7A20_I2C is not set
 # CONFIG_ZTE_BREATHING_LIGHT_LEDS is not set
 # CONFIG_ZTE_LEDS_AW210XX is not set
 # CONFIG_ZTE_LEDS_AW2016 is not set
@@ -5636,8 +5680,6 @@ CONFIG_ZCARD_HOLDER=m
 # CONFIG_ZTE_LCDBL_I2C_CTRL_VSP_VSN_200MA_ENHANCE is not set
 CONFIG_VENDOR_STATS_INFO=m
 # CONFIG_ZTE_PV_PIN_TEST is not set
-CONFIG_ZTE_DDR_INFO=m
-# CONFIG_DCMTALK_SUPPORT is not set
 CONFIG_ZTE_BOOTREASON=m
 CONFIG_ZTE_BOARD_STATE=y
 # CONFIG_ZTE_BEILU_GPIO_CTL is not set
@@ -6255,7 +6297,6 @@ CONFIG_OID_REGISTRY=y
 CONFIG_UCS2_STRING=y
 CONFIG_HAVE_GENERIC_VDSO=y
 CONFIG_GENERIC_GETTIMEOFDAY=y
-CONFIG_GENERIC_COMPAT_VDSO=y
 CONFIG_FONT_SUPPORT=y
 CONFIG_FONT_8x16=y
 CONFIG_FONT_AUTOSELECT=y
@@ -6291,12 +6332,7 @@ CONFIG_DYNAMIC_DEBUG_CORE=y
 #
 # Compile-time checks and compiler options
 #
-CONFIG_DEBUG_INFO=y
-# CONFIG_DEBUG_INFO_REDUCED is not set
-# CONFIG_DEBUG_INFO_SPLIT is not set
-CONFIG_DEBUG_INFO_DWARF4=y
-# CONFIG_DEBUG_INFO_BTF is not set
-# CONFIG_GDB_SCRIPTS is not set
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_ENABLE_MUST_CHECK is not set
 CONFIG_FRAME_WARN=4096
 # CONFIG_STRIP_ASM_SYMS is not set
@@ -6521,7 +6557,6 @@ CONFIG_PID_IN_CONTEXTIDR=y
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
 # CONFIG_DEBUG_WX is not set
 # CONFIG_DEBUG_ALIGN_RODATA is not set
-# CONFIG_DEBUG_EFI is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINKS_AND_SINKS=y
