--- a/config/my_U30Air_defconfig
+++ b/config/my_U30Air_defconfig
@@ -460,7 +460,10 @@ CONFIG_RANDOMIZE_BASE=y
 #
 CONFIG_BUILD_ARM64_DTC=""
 CONFIG_BUILD_ARM64_DTC_FLAGS="-@"
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="earlycon=sprd_serial,0x20210000,115200n8 console=ttyS1,115200n8 loop.max_part=7 loglevel=1 init=/init root=/dev/ram0 rw printk.devkmsg=on dummy_hcd.num=0 pcie_ports=compat swiotlb=1 initcall_debug=1 androidboot.init_fatal_panic=true kfence.sample_interval=0 androidboot.hardware=ums9620_2h10_feimao androidboot.dtbo_idx=0 lcd_id=IDffff lcd_name=lcd_dummy_mipi_hd lcd_base=b0000000 lcd_size=854x480 logo_bpix=8 androidboot.lwfq.type=0 androidboot.auto.efuse=T760 androidboot.auto.chipid=UMS9620-AB androidboot.veritymode=disabled"
+CONFIG_CMDLINE_FROM_BOOTLOADER=y
+# CONFIG_CMDLINE_EXTEND is not set
+# CONFIG_CMDLINE_FORCE is not set
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
 # CONFIG_DMI is not set
